# xxd-web

./: Cargo.toml  Dockerfile  docker-compose.yml
src/: main.rs
static/: index.html
static/css/: screen.css  upload.css
static/js/: upload.js
