[package]
name = "xxd-web"
version = "0.1.0"
authors = ["DemeulemeesterJarne <jarne.demeulemeester@student.howest.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.5"
actix-multipart = "0.3"
sanitize-filename = "0.3"
futures = "0.3.8"
uuid = { version = "0.8", features = ["v4"] }
